Added talk pdfs

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1604,31 +1604,31 @@
                     <hr class="divider my-4" />
                 <div class="col-sm">
 <p style="text-align: center;"> Enumeration of walks with small steps avoiding a quadrant<br> <span  style="color:white;"> 	Andrew Elvey Price*</span></p>
-<p style="text-align: center;"> Triangulations, Order Polytopes, and Generalized Snake Posets<br> <span  style="color:white;">Matias von Bell, Benjamin Braun, Derek Hanely, Khrystyna Serhiyenko, Julianne Vega, Andrés R. Vindas Meléndez* and Martha Yip</span></p>
+<p style="text-align: center;"> <a href="assets/talks/melendez.pdf">Triangulations, Order Polytopes, and Generalized Snake Posets</a><br> <span  style="color:white;">Matias von Bell, Benjamin Braun, Derek Hanely, Khrystyna Serhiyenko, Julianne Vega, Andrés R. Vindas Meléndez* and Martha Yip</span></p>
 <p style="text-align: center;"> 	Log-concave poset inequalities: extended abstract<br> <span  style="color:white;"> 	Swee Hong Chan* and Igor Pak</span></p>
-<p style="text-align: center;"> 	On the action of the long cycle on the Kazhdan-Lusztig basis<br> <span  style="color:white;"> 	Fern Gossow* and Oded Yacobi</span></p>
+<p style="text-align: center;"> <a href="assets/talks/gossow.pdf">On the action of the long cycle on the Kazhdan-Lusztig basis</a><br> <span  style="color:white;"> 	Fern Gossow* and Oded Yacobi</span></p>
 <p style="text-align: center;"> 	A Type B analog of the Whitehouse representation<br> <span  style="color:white;"> 	Sarah Brauner*</span></p>
-<p style="text-align: center;"> 	Generalized quantum Yang-Baxter moves and its application to Schubert calculus<br> <span  style="color:white;"> 	Takafumi Kouno*, Cristian Lenart and Satoshi Naito</span></p>
+<p style="text-align: center;"> <a href="assets/talks/kouno.pdf">Generalized quantum Yang-Baxter moves and its application to Schubert calculus</a><br> <span  style="color:white;"> 	Takafumi Kouno*, Cristian Lenart and Satoshi Naito</span></p>
 <p style="text-align: center;"> 	Semidistrim Lattices<br> <span  style="color:white;"> 	Colin Defant and Nathan Williams*</span></p>
-<p style="text-align: center;"> 	Integrality in the Matching-Jack conjecture and the Farahat-Higman algebra<br> <span  style="color:white;"> 	Houcine Ben Dali*</span></p>
-<p style="text-align: center;"> 	Multigrounded-partitions and character formulas<br> <span  style="color:white;"> 	Isaac Konan* and Jehanne Dousse</span></p>
-<p style="text-align: center;"> 	The m=2 amplituhedron and the hypersimplex<br> <span  style="color:white;"> 	Matteo Parisi, Melissa Sherman-Bennett* and Lauren K. Williams</span></p>
-<p style="text-align: center;"> 	The canonical complex of the weak order<br> <span  style="color:white;"> 	Doriann Albertin* and Vincent Pilaud</span></p>
+<p style="text-align: center;"> <a href="assets/talks/dali.pdf">Integrality in the Matching-Jack conjecture and the Farahat-Higman algebra</a><br> <span  style="color:white;"> 	Houcine Ben Dali*</span></p>
+<p style="text-align: center;"> <a href="assets/talks/konan.pdf">Multigrounded-partitions and character formulas</a><br> <span  style="color:white;"> 	Isaac Konan* and Jehanne Dousse</span></p>
+<p style="text-align: center;"> <a href="assets/talks/bennett.pdf">The m=2 amplituhedron and the hypersimplex</a><br> <span  style="color:white;"> 	Matteo Parisi, Melissa Sherman-Bennett* and Lauren K. Williams</span></p>
+<p style="text-align: center;"> <a href="assets/talks/albertin.pdf">The canonical complex of the weak order</a><br> <span  style="color:white;"> 	Doriann Albertin* and Vincent Pilaud</span></p>
 <p style="text-align: center;"> 	Bruhat intervals, subword complexes and brick polyhedra for finite Coxeter groups<br> <span  style="color:white;"> 	Dennis Jahn* and Christian Stump</span></p>
-<p style="text-align: center;"> 	Rank Polynomials of Fence Posets are Unimodal<br> <span  style="color:white;"> 	Mohan Ravichandran* and Ezgi Kantarci Oguz</span></p>
-<p style="text-align: center;"> 	Blowup polynomials and delta-matroids of graphs<br> <span  style="color:white;"> 	Projesh Choudhury* and Apoorva Khare</span></p>
-<p style="text-align: center;"> 	Vertex Spanning Planar Laman Graphs in Triangulated Surfaces.<br> <span  style="color:white;"> 	Eran Nevo* and Simion Tarabykin</span></p>
-<p style="text-align: center;"> 	Rational Ehrhart Theory<br> <span  style="color:white;"> 	Matthias Beck, Sophia Elia and Sophie Rehberg*</span></p>
+<p style="text-align: center;"> <a href="assets/talks/ravichandran.pdf">Rank Polynomials of Fence Posets are Unimodal</a><br> <span  style="color:white;"> 	Mohan Ravichandran* and Ezgi Kantarci Oguz</span></p>
+<p style="text-align: center;"> <a href="assets/talks/choudhury.pdf">Blowup polynomials and delta-matroids of graphs</a><br> <span  style="color:white;"> 	Projesh Choudhury* and Apoorva Khare</span></p>
+<p style="text-align: center;"> <a href="assets/talks/nevo.pdf">Vertex Spanning Planar Laman Graphs in Triangulated Surfaces</a><br> <span  style="color:white;"> 	Eran Nevo* and Simion Tarabykin</span></p>
+<p style="text-align: center;"> <a href="assets/talks/rehberg.pdf">Rational Ehrhart Theory</a><br> <span  style="color:white;"> 	Matthias Beck, Sophia Elia and Sophie Rehberg*</span></p>
 <p style="text-align: center;"> 	Peaks of cylindric plane partitions<br> <span  style="color:white;"> 	Dan Betea* and Alessandra Occelli</span></p>
-<p style="text-align: center;"> 	Tournaments and slide rules for products of $\psi$ and $\omega$ classes on $\overline{M}_{0,n}$<br> <span  style="color:white;"> 	Maria Gillespie, Sean Griffin* and Jake Levinson</span></p>
-<p style="text-align: center;"> 	Biclosed sets in affine root systems<br> <span  style="color:white;"> 	Grant Barkley* and David Speyer</span></p>
+<p style="text-align: center;"> <a href="assets/talks/griffin.pdf">Tournaments and slide rules for products of $\psi$ and $\omega$ classes on $\overline{M}_{0,n}$</a><br> <span  style="color:white;"> 	Maria Gillespie, Sean Griffin* and Jake Levinson</span></p>
+<p style="text-align: center;"> <a href="assets/talks/barkley.pdf">Biclosed sets in affine root systems</a><br> <span  style="color:white;"> 	Grant Barkley* and David Speyer</span></p>
 <p style="text-align: center;"> 	A web basis of invariant polynomials from noncrossing partitions<br> <span  style="color:white;"> 	Rebecca Patrias*, Oliver Pechenik and Jessica Striker</span></p>
-<p style="text-align: center;"> 	A Pattern Avoidance Characterization for Smoothness of Positroid Varieties<br> <span  style="color:white;"> 	Sara Billey and Jordan Weaver*</span></p>
-<p style="text-align: center;"> 	Soliton cellular automata for the affine general linear Lie superalgebra<br> <span  style="color:white;"> 	Mitchell Ryan and Benjamin Solomon*</span></p>
-<p style="text-align: center;">  	There is a Unique Planar-Consistent Sandpile Torsor Algorithm Structure<br> <span  style="color:white;"> 	Alex McDonough* and Ankan Ganguly</span></p>
+<p style="text-align: center;"> <a href="assets/talks/billey.pdf">A Pattern Avoidance Characterization for Smoothness of Positroid Varieties</a><br> <span  style="color:white;"> 	Sara Billey and Jordan Weaver*</span></p>
+<p style="text-align: center;"> <a href="assets/talks/solomon.pdf">Soliton cellular automata for the affine general linear Lie superalgebra</a><br> <span  style="color:white;"> 	Mitchell Ryan and Benjamin Solomon*</span></p>
+<p style="text-align: center;"> <a href="assets/talks/mcdonough.pdf">There is a Unique Planar-Consistent Sandpile Torsor Algorithm Structure</a><br> <span  style="color:white;"> 	Alex McDonough* and Ankan Ganguly</span></p>
 <p style="text-align: center;">  	Enumeration of corner polyhedra and 3-connected Schnyder labelings<br> <span  style="color:white;"> 	Erkan Narmanli*, Eric Fusy and Gilles Schaeffer</span></p>
-<p style="text-align: center;">  	Promotion of Kreweras words<br> <span  style="color:white;"> 	Martin Rubey* and Samuel Hopkins</span></p>
-<p style="text-align: center;">  	Higher Lie characters and cyclic descent extension on conjugacy classes<br> <span  style="color:white;"> 	Ron Adin, Pál Hegedüs and Yuval Roichman*</span></p>
+<p style="text-align: center;"> <a href="assets/talks/rubey.pdf">Promotion of Kreweras words</a><br> <span  style="color:white;"> 	Martin Rubey* and Samuel Hopkins</span></p>
+<p style="text-align: center;"> <a href="assets/talks/roichman.pdf">Higher Lie characters and cyclic descent extension on conjugacy classes</a><br> <span  style="color:white;"> 	Ron Adin, Pál Hegedüs and Yuval Roichman*</span></p>
 <p style="text-align: center;">  	Bumpless pipe dreams encode Gröbner geometry of Schubert polynomials<br> <span  style="color:white;"> 	Patricia Klein* and Anna Weigandt</span></p>
 
 
