--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -61,7 +61,7 @@ css: "thangavelu-fest"
                         </tr>
                         <tr>
                             <td>11:00 am &ndash; 12:00 pm </td>
-                            <td>Pritam Ganguly (IISc)</td>
+                            <td>Pritam Ganguly (IISc Bangalore)</td>
 			    <td><a href="titles.html#pritam"> Ornstein-Uhlenbeck meet Hermite: Extension problems and fractional Hardy type inequalities.</a></td>
                         </tr>
                         <tr>
