--- a/thangavelufest/titles.html
+++ b/thangavelufest/titles.html
@@ -38,7 +38,7 @@ In the last part of the talk we will discuss some applications of Stein's square
                 <h5><strong>Title:</strong> A Paley-Wiener theorem for Harish-Chandra modules </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">12:00 pm &ndash; 1:00 pm</a> </h5>
                 <p>
-                    <strong>Abstract:</strong> We formulate and prove a Paley-Wiener theorem for Harish-Chandra modules for real reductive groups. As a corollary we obtain a new and elementary proof of the Helgason conjecture </p>
+                    <strong>Abstract:</strong> We formulate and prove a Paley-Wiener theorem for Harish-Chandra modules for real reductive groups. As a corollary we obtain a new and elementary proof of the Helgason conjecture.</p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="garg">
