--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -52,7 +52,8 @@ css: "thangavelu-fest"
                     <tbody>
                         <tr>
                             <td>09:30 am &ndash; 10:30 am</td>
-                            <td>Jotsaroop Kaur (IISER Mohali)</td>
+                            <td>Jotsaroop Kaur (IISER Mohali)
+				&nbsp; [<a href="https://www.youtube.com/watch?v=4EC2LrR_LoA&list=PLQXtaLhI1-1ozPXHOax737869T-66RR1I" target="_blank">Video</a>]</td>
 			    <td><a href="titles.html#kaur"> Maximal Bilinear Bochner Riesz means and some applications</a></td>
                         </tr>
                         </tr>
@@ -61,12 +62,14 @@ css: "thangavelu-fest"
                         </tr>
                         <tr>
                             <td>11:00 am &ndash; 12:00 pm </td>
-                            <td>Pritam Ganguly (IISc Bangalore)</td>
+                            <td>Pritam Ganguly (IISc Bangalore)
+				&nbsp; [<a href="https://www.youtube.com/watch?v=MqZXvlkTBvE&list=PLQXtaLhI1-1ozPXHOax737869T-66RR1I" target="_blank">Video</a>]</td>
 			    <td><a href="titles.html#pritam"> Ornstein-Uhlenbeck meet Hermite: Extension problems and fractional Hardy type inequalities.</a></td>
                         </tr>
                         <tr>
                             <td>12:00 pm &ndash; 1:00 pm (online)</td>
-                            <td>Bernhard Krotz (University of Paderborn, Germany)</td>
+                            <td>Bernhard Krotz (University of Paderborn, Germany)
+				&nbsp; [<a href="https://www.youtube.com/watch?v=wZe__KTZfmc&list=PLQXtaLhI1-1ozPXHOax737869T-66RR1I" target="_blank">Video</a>]</td>
 			    <td><a href="titles.html#krotz"> A Paley-Wiener theorem for Harish-Chandra modules</a></td>
                         </tr>
                         <tr class="text-center">
@@ -74,7 +77,8 @@ css: "thangavelu-fest"
                         </tr>
                         <tr>
                             <td>2:30 pm &ndash; 3:30 pm</td>
-			    <td>Rahul Garg (IISER Bhopal)</td>
+			    <td>Rahul Garg (IISER Bhopal)
+				&nbsp; [<a href="https://www.youtube.com/watch?v=uCWH4wDc8DA&list=PLQXtaLhI1-1ozPXHOax737869T-66RR1I" target="_blank">Video</a>]</td>
 			    <td><a href="titles.html#garg"> On pseudo-multipliers associated to Grushin operators</a></td>
                         </tr>
                         <tr class="text-center">
