--- a/thangavelufest/titles.html
+++ b/thangavelufest/titles.html
@@ -17,7 +17,8 @@ css: "thangavelu-fest"
     </div>
             <div>
             <div class="pt-3 border-bottom border-secondary" id="kaur">
-                <h5><strong>Speaker:</strong> Jotsaroop Kaur </h5>
+                <h5><strong>Speaker:</strong> Jotsaroop Kaur
+				&nbsp; [<a href="https://www.youtube.com/watch?v=4EC2LrR_LoA&list=PLQXtaLhI1-1ozPXHOax737869T-66RR1I" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> Maximal Bilinear Bochner Riesz means and some applications</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">09:30 am &ndash; 10:30 am</a> </h5>
                 <p>
@@ -26,7 +27,8 @@ In the last part of the talk we will discuss some applications of Stein's square
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="pritam">
-                <h5><strong>Speaker:</strong> Pritam Ganguly </h5>
+                <h5><strong>Speaker:</strong> Pritam Ganguly
+				&nbsp; [<a href="https://www.youtube.com/watch?v=MqZXvlkTBvE&list=PLQXtaLhI1-1ozPXHOax737869T-66RR1I" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong>  Ornstein-Uhlenbeck meet Hermite: Extension problems and fractional Hardy type inequalities.</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">11:00 am &ndash; 12:00 pm</a> </h5>
                 <p>
@@ -34,7 +36,8 @@ In the last part of the talk we will discuss some applications of Stein's square
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="krotz">
-                <h5><strong>Speaker:</strong> Bernhard Krotz  </h5>
+                <h5><strong>Speaker:</strong> Bernhard Krotz
+				&nbsp; [<a href="https://www.youtube.com/watch?v=wZe__KTZfmc&list=PLQXtaLhI1-1ozPXHOax737869T-66RR1I" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> A Paley-Wiener theorem for Harish-Chandra modules </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">12:00 pm &ndash; 1:00 pm</a> </h5>
                 <p>
@@ -42,7 +45,8 @@ In the last part of the talk we will discuss some applications of Stein's square
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="garg">
-                <h5><strong>Speaker:</strong> Rahul Garg  </h5>
+                <h5><strong>Speaker:</strong> Rahul Garg
+				&nbsp; [<a href="https://www.youtube.com/watch?v=uCWH4wDc8DA&list=PLQXtaLhI1-1ozPXHOax737869T-66RR1I" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> On pseudo-multipliers associated to Grushin operators </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:30 pm &ndash; 3:30 pm</a> </h5>
                 <p>
