Added invited speaker talks

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -106,13 +106,13 @@
                     <h3 style="text-align: center;" class="h4 mb-2"><a href="https://secure.math.ubc.ca/~angel/">Omer
                             Angel</a></h3>
                     <p style="text-align: center;">University of British Columbia</p>
-                    <!--<p style="text-align: center;">TBA</p> -->
+                    <p style="text-align: center;"><a href="assets/talks/angel.pdf">Even subgraphs and Loop O(1) as factors of IID</a></p>
                 </div>
                 <div class="col-sm">
                     <h3 style="text-align: center;" class="h4 mb-2"><a href="http://math.ntnu.edu.tw/~speu/">Sen-Peng
                             Eu</a></h3>
                     <p style="text-align: center;">National Taiwan Normal University</p>
-                    <!--<p style="text-align: center;">TBA</p> -->
+                    <p style="text-align: center; color: blue;">Signed statistics on permutations &#8212; from symmetric group to Coxeter groups</p>
                 </div>
             </div>
         </div>
@@ -122,12 +122,12 @@
                     <h3 style="text-align: center;" class="h4 mb-2"><a href="http://www.math.iisc.ac.in/~khare/">Apoorva
                             Khare</a></h3>
                     <p style="text-align: center;">Indian Institute of Science</p>
-                    <!--<p style="text-align: center;">TBA</p> -->
+                    <p style="text-align: center;"><a href="assets/talks/khare.pdf">Equalities and inequalities involving Schur polynomials</a></p>
                 </div>
                 <div class="col-sm">
                     <h3 style="text-align: center;" class="h4 mb-2"><a href="http://web.mat.bham.ac.uk/D.Kuehn/">Daniela Kuhn</a></h3>
                     <p style="text-align: center;">University of Birmingham</p>
-                    <!--<p style="text-align: center;">TBA</p> -->
+                    <p style="text-align: center; color: blue;">Proof of the Erdos-Faber-Lovasz Conjecture</p>
                 </div>
             </div>
         </div>
@@ -137,13 +137,14 @@
                     <h3 style="text-align: center;" class="h4 mb-2"><a href="https://www.mellit.org/">Anton Mellit</a>
                     </h3>
                     <p style="text-align: center;">University of Vienna</p>
-                    <!--<p style="text-align: center;">TBA</p> -->
+                    <p style="text-align: center; color: blue;">Loehr-Warrington conjecture, shuffle conjectures and enumeration of p-tableaux</p>
                 </div>
                 <div class="col-sm">
                     <h3 style="text-align: center;" class="h4 mb-2"><a
-                            href="https://psniady.impan.pl/fpsac.html">Piotr Śniady</a></h3>
+                            href="https://psniady.impan.pl/data/uploads/cv/list-of-publications-2017.pdf">Piotr
+                            Śniady</a></h3>
                     <p style="text-align: center;">Polish Academy of Sciences</p>
-                    <!--<p style="text-align: center;">TBA</p> -->
+                    <p style="text-align: center; color: blue;">Museum of visual ART. Guided tour</p>
                 </div>
             </div>
         </div>
@@ -153,13 +154,13 @@
                     <h3 style="text-align: center;" class="h4 mb-2"><a href="https://uqam.academia.edu/HughThomas">Hugh
                             Thomas</a></h3>
                     <p style="text-align: center;">L'Université du Québec à Montréal</p>
-                    <!--<p style="text-align: center;">TBA</p> -->
+                    <p style="text-align: center;"><a href="assets/talks/thomas.pdf">Combinatorics of scattering amplitudes</a></p>
                 </div>
                 <div class="col-sm">
                     <h3 style="text-align: center;" class="h4 mb-2"><a
                             href="http://sites.math.washington.edu/~thomas/">Rekha Thomas</a></h3>
                     <p style="text-align: center;">University of Washington</p>
-                    <!--<p style="text-align: center;">TBA</p> -->
+                    <p style="text-align: center; color: blue;">Graphical Designs</p>
                 </div>
             </div>
         </div>
@@ -169,7 +170,7 @@
                     <h3 style="text-align: center;" class="h4 mb-2"><a href="http://sites.math.washington.edu/~vinzant/">Cynthia
                             Vinzant</a></h3>
                     <p style="text-align: center;">University of Washington</p>
-                    <!--<p style="text-align: center;">TBA</p> -->
+                    <p style="text-align: center;"><a href="assets/talks/vinzant.pdf">Log-concavity in matroids and expanders</a></p>
                 </div>
             </div>
     </div>
@@ -181,7 +182,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <p style="text-align: center;">Go to the <a href="#submission">Submission</a> section for information on contributed talks.</p>
+                    <p style="text-align: center;">Go to the <a href="#schedule">Schedule</a> section for information on contributed talks.</p>
                 </div>
             </div>
         </div>
