Added special invited talks

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -173,8 +173,35 @@
                     <p style="text-align: center;"><a href="assets/talks/vinzant.pdf">Log-concavity in matroids and expanders</a></p>
                 </div>
             </div>
-    </div>
         </div>
+        <br>
+
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+		<h2 class="text-white mt-0">Special talks</h2>        
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <h3 style="text-align: center;" class="h4 mb-2"><a href="https://sites.google.com/site/chrisdbowman40/home">Chris
+                            Bowman</a></h3>
+                    <p style="text-align: center;">University of York</p>
+                    <p style="text-align: center; color: blue;">Kronecker Products, Modular Representations, and Character Vanishing: 
+							results and conjectures of Christine Bessenrodt</p>
+                </div>
+                <div class="col-sm">
+                    <h3 style="text-align: center;" class="h4 mb-2">P. P. Divakaran</h3>
+                    <p style="text-align: center;">Chennai Mathematical Institute</p>
+                    <p style="text-align: center;"><a href="assets/talks/divakaran.pdf">Pingala and the beginnings of 
+			    				combinatorics in India</a></p>
+                </div>
+            </div>
+        </div>
+
+	</div>
         </div>
         </div>
         </div>
