--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -54,13 +54,14 @@ css: "datta-fest"
                         <tr>
                             <td>09:30 am &ndash; 10:15 am</td>
                             <td>Bhaskar Bagchi (ISI, Bangalore) </td>
-                            <td><a href="titles.html#bagchi">The uniqueness conjecture</a></td>
+                            <td><a href="titles.html#bagchi">The uniqueness conjecture</a>
+                            &nbsp; [<a href="https://www.youtube.com/watch?v=yxNtPaetIyw&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=100s" target="_blank">Video</a>]</td>
                         </tr>
                         <tr>
                             <td>10:20 am &ndash; 11:05 am (online)</td>
                             <td>Benjamin Burton (University of Queensland, Australia)</td>
                             <td><a href="titles.html#burton">The power of cheap tricks: Using combinatorial structure in topological software</a>
-                            </td>
+                            &nbsp; [<a href="https://www.youtube.com/watch?v=yxNtPaetIyw&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=3099s" target="_blank">Video</a>]</td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
