--- a/dattafest/titles.html
+++ b/dattafest/titles.html
@@ -17,7 +17,8 @@ css: "datta-fest"
     </div>
             <div>
             <div class="pt-3 border-bottom border-secondary" id="bagchi">
-                <h5><strong>Speaker:</strong> Bhaskar Bagchi, Indian Statistical Institute, Bangalore </h5>
+                <h5><strong>Speaker:</strong> Bhaskar Bagchi, Indian Statistical Institute, Bangalore
+                            &nbsp; [<a href="https://www.youtube.com/watch?v=yxNtPaetIyw&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=100s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> The uniqueness conjecture</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">09:30 am &ndash; 10:15 am</a> </h5>
                 <p>
@@ -27,7 +28,8 @@ css: "datta-fest"
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="burton">
-                <h5><strong>Speaker:</strong> Benjamin Burton, University of Queensland, Australia </h5>
+                <h5><strong>Speaker:</strong> Benjamin Burton, University of Queensland, Australia
+                            &nbsp; [<a href="https://www.youtube.com/watch?v=yxNtPaetIyw&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=3099s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> The power of cheap tricks: Using combinatorial structure in topological software
                 </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">10:20 am &ndash; 11:05 am</a> (online) </h5>
