--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -73,7 +73,7 @@ css: "datta-fest"
                         </tr>
                         <tr>
                             <td>12:20 pm &ndash; 1:05 pm</td>
-                            <td>Soumen Sarkar (IIT, Madras)</td>
+                            <td>Soumen Sarkar (IIT Madras)</td>
                             <td><a href="titles.html#sarkar">On triangulations of a class of quasitoric manifolds</a></td>
                         </tr>
                         <tr class="text-center">
