--- a/dattafest/titles.html
+++ b/dattafest/titles.html
@@ -17,7 +17,7 @@ css: "datta-fest"
     </div>
             <div>
             <div class="pt-3 border-bottom border-secondary" id="bagchi">
-                <h5><strong>Speaker:</strong> Bhaskar Bagchi, Indian Statistical Institute, Bangalore
+                <h5><strong>Speaker:</strong> Bhaskar Bagchi
                             &nbsp; [<a href="https://www.youtube.com/watch?v=yxNtPaetIyw&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=100s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> The uniqueness conjecture</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">09:30 am &ndash; 10:15 am</a> </h5>
@@ -28,7 +28,7 @@ css: "datta-fest"
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="burton">
-                <h5><strong>Speaker:</strong> Benjamin Burton, University of Queensland, Australia
+                <h5><strong>Speaker:</strong> Benjamin Burton
                             &nbsp; [<a href="https://www.youtube.com/watch?v=yxNtPaetIyw&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=3099s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> The power of cheap tricks: Using combinatorial structure in topological software
                 </h5>
@@ -41,7 +41,7 @@ css: "datta-fest"
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="murai">
-                <h5><strong>Speaker:</strong> Satoshi Murai, Waseda University, Japan </h5>
+                <h5><strong>Speaker:</strong> Satoshi Murai</h5>
                 <h5><strong>Title:</strong> Stackedness, tightness, and commutative algebra </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">11:30 am &ndash; 12:15 pm</a> (online) </h5>
                 <p>
@@ -54,7 +54,7 @@ css: "datta-fest"
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="sarkar">
-                <h5><strong>Speaker:</strong> Soumen Sarkar, Indian Institute of Technology, Madras </h5>
+                <h5><strong>Speaker:</strong> Soumen Sarkar</h5>
                 <h5><strong>Title:</strong> On triangulations of a class of quasitoric manifolds </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">12:20 pm &ndash; 1:05 pm</a> </h5>
                 <p>
@@ -65,7 +65,7 @@ css: "datta-fest"
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="kuhnel">
-                <h5><strong>Speaker:</strong> Wolfgang Kühnel<a href="#slidetalk" class="lead gold">&midast;</a>, University of Stuttgart, Germany </h5>
+                <h5><strong>Speaker:</strong> Wolfgang Kühnel<a href="#slidetalk" class="lead gold">&midast;</a></h5>
                 <h5><strong>Title:</strong> Generalized Heawood numbers </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:10 pm &ndash; 2:40 pm</a> </h5>
                 <p>
@@ -74,7 +74,7 @@ css: "datta-fest"
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="spreer">
-                <h5><strong>Speaker:</strong> Jonathan Spreer, University of Sydney, Australia</h5>
+                <h5><strong>Speaker:</strong> Jonathan Spreer</h5>
                 <h5><strong>Title:</strong> An algorithm to compute the crosscap number of a knot </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:45 pm &ndash; 3:35 pm</a> </h5>
                 <p>
