--- a/dattafest/titles.html
+++ b/dattafest/titles.html
@@ -18,7 +18,7 @@ css: "datta-fest"
             <div>
             <div class="pt-3 border-bottom border-secondary" id="bagchi">
                 <h5><strong>Speaker:</strong> Bhaskar Bagchi
-                            &nbsp; [<a href="https://www.youtube.com/watch?v=yxNtPaetIyw&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=100s" target="_blank">Video</a>]</h5>
+                &nbsp; [<a href="https://www.youtube.com/watch?v=yxNtPaetIyw&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=100s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> The uniqueness conjecture</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">09:30 am &ndash; 10:15 am</a> </h5>
                 <p>
@@ -29,7 +29,7 @@ css: "datta-fest"
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="burton">
                 <h5><strong>Speaker:</strong> Benjamin Burton
-                            &nbsp; [<a href="https://www.youtube.com/watch?v=yxNtPaetIyw&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=3099s" target="_blank">Video</a>]</h5>
+                &nbsp; [<a href="https://www.youtube.com/watch?v=yxNtPaetIyw&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=3099s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> The power of cheap tricks: Using combinatorial structure in topological software
                 </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">10:20 am &ndash; 11:05 am</a> (online) </h5>
@@ -41,7 +41,8 @@ css: "datta-fest"
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="murai">
-                <h5><strong>Speaker:</strong> Satoshi Murai</h5>
+                <h5><strong>Speaker:</strong> Satoshi Murai
+                &nbsp; [<a href="https://www.youtube.com/watch?v=VCfqUJ4Ca7g&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=68s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> Stackedness, tightness, and commutative algebra </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">11:30 am &ndash; 12:15 pm</a> (online) </h5>
                 <p>
@@ -54,7 +55,8 @@ css: "datta-fest"
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="sarkar">
-                <h5><strong>Speaker:</strong> Soumen Sarkar</h5>
+                <h5><strong>Speaker:</strong> Soumen Sarkar
+                &nbsp; [<a href="https://www.youtube.com/watch?v=VCfqUJ4Ca7g&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=3035s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> On triangulations of a class of quasitoric manifolds </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">12:20 pm &ndash; 1:05 pm</a> </h5>
                 <p>
