--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -69,12 +69,14 @@ css: "datta-fest"
                         <tr>
                             <td>11:30 am &ndash; 12:15 pm (online)</td>
                             <td>Satoshi Murai (Waseda University, Japan)</td>
-                            <td><a href="titles.html#murai">Stackedness, tightness, and commutative algebra</a></td>
+                            <td><a href="titles.html#murai">Stackedness, tightness, and commutative algebra</a>
+                            &nbsp; [<a href="https://www.youtube.com/watch?v=VCfqUJ4Ca7g&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=68s" target="_blank">Video</a>]</td>
                         </tr>
                         <tr>
                             <td>12:20 pm &ndash; 1:05 pm</td>
                             <td>Soumen Sarkar (IIT Madras)</td>
-                            <td><a href="titles.html#sarkar">On triangulations of a class of quasitoric manifolds</a></td>
+                            <td><a href="titles.html#sarkar">On triangulations of a class of quasitoric manifolds</a>
+                            &nbsp; [<a href="https://www.youtube.com/watch?v=VCfqUJ4Ca7g&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=3035s" target="_blank">Video</a>]</td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> LUNCH </td>
