--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -53,7 +53,7 @@ css: "datta-fest"
                     <tbody>
                         <tr>
                             <td>09:30 am &ndash; 10:15 am</td>
-                            <td>Bhaskar Bagchi (ISI, Bangalore) </td>
+                            <td>Bhaskar Bagchi (ISI Bangalore) </td>
                             <td><a href="titles.html#bagchi">The uniqueness conjecture</a>
                             &nbsp; [<a href="https://www.youtube.com/watch?v=yxNtPaetIyw&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=100s" target="_blank">Video</a>]</td>
                         </tr>
