--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -83,13 +83,15 @@ css: "datta-fest"
                         </tr>
                         <tr>
                             <td>2:10 pm &ndash; 2:40 pm (slides<a href="#slidetalk" class="lead gold">&midast;</a>)</td>
-                            <td>Wolfgang Kühnel (University of Stuttgart) </td>
-                            <td><a href="titles.html#kuhnel">Generalized Heawood numbers</a></td>
+                            <td>Wolfgang Kühnel (University of Stuttgart)</td>
+                            <td><a href="titles.html#kuhnel">Generalized Heawood numbers</a>
+                            &nbsp; [<a href="https://www.youtube.com/watch?v=gAb4091UNIE&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=207s" target="_blank">Video</a>]</td>
                         </tr>
                         <tr>
                             <td>2:45 pm &ndash; 3:30 pm</td>
                             <td>Jonathan Spreer (University of Sydney, Australia)</td>
-                            <td><a href="titles.html#spreer">An algorithm to compute the crosscap number of a knot</a></td>
+                            <td><a href="titles.html#spreer">An algorithm to compute the crosscap number of a knot</a>
+                            &nbsp; [<a href="https://www.youtube.com/watch?v=gAb4091UNIE&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=2398s" target="_blank">Video</a>]</td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
