--- a/dattafest/titles.html
+++ b/dattafest/titles.html
@@ -67,7 +67,8 @@ css: "datta-fest"
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="kuhnel">
-                <h5><strong>Speaker:</strong> Wolfgang Kühnel<a href="#slidetalk" class="lead gold">&midast;</a></h5>
+                <h5><strong>Speaker:</strong> Wolfgang Kühnel<a href="#slidetalk" class="lead gold">&midast;</a>
+                &nbsp; [<a href="https://www.youtube.com/watch?v=gAb4091UNIE&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=207s" target="_blank">Video</a>]</h5>
                 <h5><strong>Title:</strong> Generalized Heawood numbers </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:10 pm &ndash; 2:40 pm</a> </h5>
                 <p>
@@ -76,8 +77,9 @@ css: "datta-fest"
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="spreer">
-                <h5><strong>Speaker:</strong> Jonathan Spreer</h5>
-                <h5><strong>Title:</strong> An algorithm to compute the crosscap number of a knot </h5>
+                <h5><strong>Speaker:</strong> Jonathan Spreer
+                &nbsp; [<a href="https://www.youtube.com/watch?v=gAb4091UNIE&list=PLQXtaLhI1-1r-rx6NhzWZqakvdVjCodWt&t=2398s" target="_blank">Video</a>]</h5>
+                <h5><strong>Title:</strong> An algorithm to compute the crosscap number of a knot</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:45 pm &ndash; 3:35 pm</a> </h5>
                 <p>
                     <strong>Abstract:</strong>  
