Commented registration section

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -427,7 +427,9 @@
                     <h2 class="text-white mb-4">Registration</h2>
                     <hr class="divider light my-4" />
                     <p class="text-white-50 mb-4" style="text-align: justify;"> 
-                    Registration can be done for either in-person or online attendance, and the rates are different
+			Registration for FPSAC 2022 is now closed.
+		    </p>
+<!--                    Registration can be done for either in-person or online attendance, and the rates are different
                     for students and non-students. We are charging registration fees for online attendance to enable us
                     to create a robust platform which will enable both kinds of participants to have a seamless experience.
                     In addition, online participants will be given a <strong>Participation Certificate</strong> on 
@@ -519,17 +521,17 @@
 		</ol>
 
 		  <p class="text-white-50 mb-4">To start the process, click on the <a href="form.html" target="_blank">registration form</a>.
-<!--		  <br>
+		  <br>
 		  <span style="color:black;">(Update on March 29: fixed bugs in the form.)</span>
  		  <br>
 		  <span style="color:black;">(Update on April 7: There is a problem with payment for foreign card holders.
-		  We are working on fixing this. You can still fill the registration form.)</span> -->
+		  We are working on fixing this. You can still fill the registration form.)</span> 
  		  <br>
 		  <span style="color:black;">(Update on April 18: The generic problem with payment for foreign card holders has 
 		  now been resolved.)</span>
-<!--		  <br>
+		  <br>
 		  <span style="color:black;">(Update on May 5: It seems that there are compatibility issues with Chase Bank (hat tip Sheila!)
-	 	  for foreign transactions. Please use a card from a different bank.)</span> -->
+	 	  for foreign transactions. Please use a card from a different bank.)</span> 
 		  <br>
 		  <span style="color:black;">(Update on May 7: For foreign cards, two-factor authentication seems to be necessary for
 	 	  the transactions to go through.)</span>
@@ -544,7 +546,7 @@
 		    <p class="text-white-50 mb-4" style="text-align: justify;">Once you have registered, you can look at 
 			the <a href="#localinfovisa">options</a> for accommodation.
 			Reservations are on a first-come-first-served basis.</p>        
-			
+-->			
                 </div>
             </div>
         </div>
@@ -1076,6 +1078,9 @@
             <div class="col-lg-10 text-center">
                <h5 style="text-align: justify;">Tours and excursions</h5>
                <hr>  
+	       <p class="text mb-6">
+		       (Thanks to Chinmay Dharmendra for help with this section.)
+	       </p>
 	       <p class="text mb-6">
 	       Bangalore is conveniently located for many different types of travel trips. For an exhaustive list of options from Bangalore, visit
 	       the <a href="https://www.kstdc.co/tour-categories/tour-packages-from-bengaluru/">KSTDC website</a>. 
