--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1569,11 +1569,11 @@
 <p style="text-align: center;"> <a href="assets/posters/deb.pdf">Continuously Increasing Subsequences of Random Multiset Permutations</a><br> <span  style="color:white;"> 	Alexander Clifton, Bishal Deb*, Yifeng Huang, Sam Spiro and Semin Yoo</span></p>
 <p style="text-align: center;"> <a href="assets/posters/sundaram.pdf">Row-strict dual immaculate functions and 0-Hecke modules</a><br> <span  style="color:white;"> 	Elizabeth Niese, Sheila Sundaram*, 
 	Stephanie van Willigenburg, Julianne Vega and Shiyun Wang</span></p>
-<p style="text-align: center;"> 	Homomorphism complexes, reconfiguration, and homotopy for directed graphs<br> <span  style="color:white;"> 	Anton Dochtermann and Anurag Singh*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/singh.pdf">Homomorphism complexes, reconfiguration, and homotopy for directed graphs</a><br> <span  style="color:white;"> 	Anton Dochtermann and Anurag Singh*</span></p>
 <p style="text-align: center;"> 	<a href="assets/posters/elizalde.pdf">Walks in simplices, cylindric tableaux, and asymmetric exclusion processes</a><br> <span  style="color:white;"> 	Sergi Elizalde*</span></p>
 <p style="text-align: center;"> 	<a href="assets/posters/nevo.pdf">Stable sets in flag spheres</a><br> <span  style="color:white;"> 	Maria Chudnovsky and Eran Nevo*</span></p>
 <p style="text-align: center;"> 	<a href="assets/posters/kebede.pdf">An involution on derangements preserving excedances and right-to-left minima</a><br> <span  style="color:white;"> 	Per Wilhelm Alexandersson and Frether Getachew Kebede*</span></p>
-<p style="text-align: center;"> 	Peaks are Preserved under Run-Sorting<br> <span  style="color:white;"> 	Per Alexandersson and Olivia Nabawanda*</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/nabawanda.pdf">Peaks are Preserved under Run-Sorting</a><br> <span  style="color:white;"> 	Per Alexandersson and Olivia Nabawanda*</span></p>
 <p style="text-align: center;"> 	<a href="assets/posters/defant.pdf">Troupes, Cumulants, and Stack-Sorting</a><br> <span  style="color:white;"> 	Colin Defant*</span></p>
 <p style="text-align: center;"> 	<a href="assets/posters/han.pdf">Equidistributions around special kinds of descents and excedances via continued fractions</a><br> <span  style="color:white;"> 	Bin Han*, Jianxi Mao and Jiang Zeng</span></p>
 <p style="text-align: center;"> 	<a href="assets/posters/gao.pdf">Combinatorics of Newell-Littlewood numbers</a><br> <span  style="color:white;"> 	Shiliang Gao, Gidon Orelowitz*, Nicolas Ressayre and Alexander Yong</span></p>
@@ -1585,7 +1585,7 @@
 <p style="text-align: center;"> 	Flag Hilbert--Poincar\'e series and Igusa zeta functions of hyperplane arrangements<br> <span  style="color:white;"> 	Joshua Maglione* and Christopher Voll</span></p>
 <p style="text-align: center;"> 	Inequality of a class of near-ribbon skew Schur Q functions<br> <span  style="color:white;"> 	Maria Gillespie and Kyle Salois*</span></p>
 <p style="text-align: center;"> 	Classifying Levi-spherical Schubert varieties<br> <span  style="color:white;"> 	Yibo Gao, Reuven Hodges* and Alexander Yong</span></p>
-<p style="text-align: center;"> 	Asymptotics of coefficients of algebraic series via embedding into rational series (extended abstract)<br> <span  style="color:white;"> 	Torin Greenwood*, Stephen Melczer, Tiadora Ruza and Mark C. Wilson</span></p>
+<p style="text-align: center;"> 	<a href="assets/posters/greenwood.pdf">Asymptotics of coefficients of algebraic series via embedding into rational series (extended abstract)</a><br> <span  style="color:white;"> 	Torin Greenwood*, Stephen Melczer, Tiadora Ruza and Mark C. Wilson</span></p>
 <p style="text-align: center;"> 	<a href="assets/posters/elsener.pdf">Friezes for a Pair of Pants</a><br> <span  style="color:white;"> 	Ilke Canakci, Anna Felikson, Ana Garcia Elsener* and Pavel Tumarkin</span></p>
 <p style="text-align: center;"> 	<a href="assets/posters/bhardwaj.pdf">Affine semigroups of maximal projective dimension</a><br> <span  style="color:white;"> 	Om Prakash Bhardwaj*, Kriti Goel and Indranath Sengupta</span></p>
 <p style="text-align: center;"> 	<a href="assets/posters/jang.pdf">A combinatorial model for the transition matrix between the Specht and web bases</a><br> <span  style="color:white;"> 	Jihyeug Jang*, Byung-Hak Hwang and Jaeseong Oh</span></p>
